Modify some of CloudBackup APIs to use task id rather than volume id.
This allows more than one concurrent backup/restore for a given
volume/cloudbackup.

CloudBackupCreate and CloudBackupRestore now additionally returns task id.
CloudBackupStatus can take task id as an optional parameter.
Map key for CloudBackupStatusResponse is task id rather than source volume id.
CloudBackupStateChange takes in taskid rather than source volume id.
