# api/server/backup.go
@@ -22,12 +22,12 @@ func (vd *volAPI) cloudBackupCreate(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	err = d.CloudBackupCreate(backupReq)
+	createResp, err := d.CloudBackupCreate(backupReq)
 	if err != nil {
 		vd.sendError(method, backupReq.VolumeID, w, err.Error(), http.StatusInternalServerError)
 		return
 	}
-	w.WriteHeader(http.StatusOK)
+	json.NewEncoder(w).Encode(createResp)
 }
 
 func (vd *volAPI) cloudBackupGroupCreate(w http.ResponseWriter, r *http.Request) {
@@ -242,7 +242,7 @@ func (vd *volAPI) cloudBackupStateChange(w http.ResponseWriter, r *http.Request)
 
 	err = d.CloudBackupStateChange(stateChangeReq)
 	if err != nil {
-		vd.sendError(method, stateChangeReq.SrcVolumeID, w, err.Error(), http.StatusInternalServerError)
+		vd.sendError(method, "", w, err.Error(), http.StatusInternalServerError)
 		return
 	}
 	w.WriteHeader(http.StatusOK)
